k3s/network-policies/allow-sender-fetcher.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-sender-fetcher
  namespace: app
spec:
  endpointSelector:
    matchLabels:
      app: fetcher
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: sender
