k3s/network-policies/restrict-traffic.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: app
spec:
  endpointSelector: {}
  ingress: []
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: db
spec:
  endpointSelector: {}
  ingress: []
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: edge
spec:
  endpointSelector: {}
  ingress: []
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: legacy
spec:
  endpointSelector: {}
  ingress: []
